# serde_typename

./: Cargo.toml  README.md
.github/workflows/: pipeline.yml
src/: de.rs  error.rs  lib.rs  ser.rs
